samples/_failures_safe/1761179453_7ee19d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01381850.c: In function ‘main’:
./samples/SAFE/__tmp_01381850.c:155:5: error: expected declaration or statement at end of input
  155 |     printf("\n");
      |     ^~~~~~
